@@ -26,6 +26,8 @@
 #include "config.h"
 #include "NameInstance.h"
 
+#include "JSScope.h"
+
 namespace JSC {
 
 const ClassInfo NameInstance::s_info = { "Name", &Base::s_info, 0, 0, CREATE_METHOD_TABLE(NameInstance) };
